--- a/src/components/FlashCard.css
+++ b/src/components/FlashCard.css
@@ -1,2 +1,11 @@
 .title {
 }
+
+input [type="radio"]:checked + span
+ {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: 1px solid green;
+    content: "";
+  }
