--- a/src/components/FlashCard.css
+++ b/src/components/FlashCard.css
@@ -1,11 +1,14 @@
 .title {
 }
 
-input [type="radio"]:checked + span
- {
-    display: block;
-    width: 100%;
-    height: 100%;
-    border: 1px solid green;
-    content: "";
-  }
+input [type="radio"]:checked + span {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: 1px solid green;
+  content: "";
+}
+div {
+  margin-bottom: 15px;
+  font-size: 20px;
+}
