updated a lot of the stylings

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #cccccc;
+  background-color: #040404;
 }
 
 code {
